--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,8 @@
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h2 class="mb-0">User Information</h2>
+                        <h4 class="mb-0">Important: Use fake information, this is public</h2>
+
                         <a href="{{ url_for('history') }}" class="btn btn-secondary">View History</a>
                     </div>
                     <div class="card-body">
